--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Nasiphi Ngcawa</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/NgcawaNasiphi" target="_blank">
+            Nasiphi Ngcawa
+          </a>
+          and is
+          <a
+            href="https://github.com/NgcawaNasiphi/My-SheCodes-weather-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://myshecodesproject.netlify.app" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
